Starting to build up actual builder

--- a/vizro-ai/examples/langchain_develop_retry.ipynb
+++ b/vizro-ai/examples/langchain_develop_retry.ipynb
@@ -5,8 +5,8 @@
    "id": "5999ceb3-7621-4121-85a2-a9766c593807",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-02T11:43:49.735021Z",
-     "start_time": "2024-05-02T11:43:49.727880Z"
+     "end_time": "2024-05-02T14:00:23.595170Z",
+     "start_time": "2024-05-02T14:00:23.523125Z"
     }
    },
    "source": [
@@ -21,20 +21,20 @@
        "True"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 29
+   "execution_count": 1
   },
   {
    "cell_type": "code",
    "id": "8ef5d1e2-6246-4771-85bf-890c343e5fa2",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-02T11:43:50.942963Z",
-     "start_time": "2024-05-02T11:43:50.938161Z"
+     "end_time": "2024-05-02T14:00:29.373122Z",
+     "start_time": "2024-05-02T14:00:23.597476Z"
     }
    },
    "source": [
@@ -48,15 +48,15 @@
     "from langchain_core.exceptions import OutputParserException"
    ],
    "outputs": [],
-   "execution_count": 30
+   "execution_count": 2
   },
   {
    "cell_type": "code",
    "id": "9573537f-dd35-4981-9bde-54842bdba020",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-02T11:43:51.474914Z",
-     "start_time": "2024-05-02T11:43:51.469991Z"
+     "end_time": "2024-05-02T14:00:29.392735Z",
+     "start_time": "2024-05-02T14:00:29.375648Z"
     }
    },
    "source": [
@@ -68,37 +68,37 @@
     ")"
    ],
    "outputs": [],
-   "execution_count": 31
+   "execution_count": 3
   },
   {
    "cell_type": "code",
    "id": "1b21ea4a-979d-4099-bdd2-9fef98592042",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-02T11:43:52.843924Z",
-     "start_time": "2024-05-02T11:43:52.840742Z"
+     "end_time": "2024-05-02T14:00:29.397662Z",
+     "start_time": "2024-05-02T14:00:29.394599Z"
     }
    },
    "source": [
     "from pydantic.v1 import BaseModel as BaseModelV1"
    ],
    "outputs": [],
-   "execution_count": 32
+   "execution_count": 4
   },
   {
    "cell_type": "code",
    "id": "df171406-64d3-4c73-96be-83e867ff862f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-02T11:43:53.600618Z",
-     "start_time": "2024-05-02T11:43:53.595071Z"
+     "end_time": "2024-05-02T14:00:30.036473Z",
+     "start_time": "2024-05-02T14:00:29.401985Z"
     }
    },
    "source": [
     "from langchain_anthropic import ChatAnthropic"
    ],
    "outputs": [],
-   "execution_count": 33
+   "execution_count": 5
   },
   {
    "cell_type": "markdown",
@@ -206,12 +206,12 @@
    "id": "0295ba8a-0afb-48ff-bad4-3a929fdc7492",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-02T11:44:01.018048Z",
-     "start_time": "2024-05-02T11:44:00.990287Z"
+     "end_time": "2024-05-02T14:01:18.194726Z",
+     "start_time": "2024-05-02T14:01:18.051552Z"
     }
    },
    "source": [
-    "model = ChatOpenAI(temperature=0)\n",
+    "model = ChatOpenAI(model =\"gpt-4-turbo\", temperature=0)\n",
     "\n",
     "# model = ChatAnthropic(\n",
     "#     model='claude-3-opus-20240229',\n",
@@ -220,7 +220,7 @@
     "# )"
    ],
    "outputs": [],
-   "execution_count": 34
+   "execution_count": 12
   },
   {
    "cell_type": "markdown",
@@ -233,8 +233,8 @@
    "id": "07a80f76-f22a-4a87-9427-eac49afd2ac3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-02T11:44:09.762707Z",
-     "start_time": "2024-05-02T11:44:09.745589Z"
+     "end_time": "2024-05-02T14:00:59.626990Z",
+     "start_time": "2024-05-02T14:00:59.618949Z"
     }
    },
    "source": [
@@ -262,7 +262,7 @@
     "    return validation_error"
    ],
    "outputs": [],
-   "execution_count": 35
+   "execution_count": 8
   },
   {
    "metadata": {},
@@ -273,8 +273,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-02T11:45:37.061418Z",
-     "start_time": "2024-05-02T11:45:37.055847Z"
+     "end_time": "2024-05-02T13:54:55.631351Z",
+     "start_time": "2024-05-02T13:54:55.622043Z"
     }
    },
    "cell_type": "code",
@@ -292,13 +292,13 @@
    ],
    "id": "637463f13fc4c852",
    "outputs": [],
-   "execution_count": 36
+   "execution_count": 65
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-02T11:45:47.661292Z",
-     "start_time": "2024-05-02T11:45:47.656718Z"
+     "end_time": "2024-05-02T13:55:02.544378Z",
+     "start_time": "2024-05-02T13:55:02.538132Z"
     }
    },
    "cell_type": "code",
@@ -308,26 +308,26 @@
    ],
    "id": "ca1a372460976ef8",
    "outputs": [],
-   "execution_count": 37
+   "execution_count": 66
   },
   {
    "cell_type": "code",
    "id": "5d10da9c-80d8-4d62-9cae-81f0a8a2b0b3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-02T11:46:20.937048Z",
-     "start_time": "2024-05-02T11:46:20.933877Z"
+     "end_time": "2024-05-02T13:55:04.871081Z",
+     "start_time": "2024-05-02T13:55:04.866449Z"
     }
    },
    "source": "query = \"What 5 actors who played in the movie Inception?\"\n",
    "outputs": [],
-   "execution_count": 38
+   "execution_count": 67
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-02T11:48:40.854606Z",
-     "start_time": "2024-05-02T11:48:37.798347Z"
+     "end_time": "2024-05-02T13:56:10.887529Z",
+     "start_time": "2024-05-02T13:56:06.887623Z"
     }
    },
    "cell_type": "code",
@@ -345,13 +345,13 @@
      ]
     }
    ],
-   "execution_count": 41
+   "execution_count": 70
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-02T11:48:44.067440Z",
-     "start_time": "2024-05-02T11:48:44.061764Z"
+     "end_time": "2024-05-02T13:56:12.062783Z",
+     "start_time": "2024-05-02T13:56:12.055811Z"
     }
    },
    "cell_type": "code",
@@ -364,12 +364,12 @@
        "langchain_core.exceptions.OutputParserException('Failed to parse Actors from completion {\"actors\": [{\"name\": \"Leonardo DiCaprio\", \"country_origin\": \"United States\"}, {\"name\": \"Joseph Gordon-Levitt\", \"country_origin\": \"United States\"}, {\"name\": \"Ellen Page\", \"country_origin\": \"Canada\"}, {\"name\": \"Tom Hardy\", \"country_origin\": \"United Kingdom\"}, {\"name\": \"Ken Watanabe\", \"country_origin\": \"Japan\"}]}. Got: 5 validation errors for Actors\\nactors.0.country_origin\\n  Value error, Must be all caps! [type=value_error, input_value=\\'United States\\', input_type=str]\\n    For further information visit https://errors.pydantic.dev/2.7/v/value_error\\nactors.1.country_origin\\n  Value error, Must be all caps! [type=value_error, input_value=\\'United States\\', input_type=str]\\n    For further information visit https://errors.pydantic.dev/2.7/v/value_error\\nactors.2.country_origin\\n  Value error, Must be all caps! [type=value_error, input_value=\\'Canada\\', input_type=str]\\n    For further information visit https://errors.pydantic.dev/2.7/v/value_error\\nactors.3.country_origin\\n  Value error, Must be all caps! [type=value_error, input_value=\\'United Kingdom\\', input_type=str]\\n    For further information visit https://errors.pydantic.dev/2.7/v/value_error\\nactors.4.country_origin\\n  Value error, Must be all caps! [type=value_error, input_value=\\'Japan\\', input_type=str]\\n    For further information visit https://errors.pydantic.dev/2.7/v/value_error')"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 42
+   "execution_count": 71
   },
   {
    "metadata": {
@@ -379,7 +379,7 @@
     }
    },
    "cell_type": "code",
-   "source": "res.",
+   "source": "res",
    "id": "3729fd6525067ef1",
    "outputs": [
     {
@@ -404,15 +404,15 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-02T11:50:10.802503Z",
-     "start_time": "2024-05-02T11:50:10.799323Z"
+     "end_time": "2024-05-02T14:00:41.147100Z",
+     "start_time": "2024-05-02T14:00:32.298094Z"
     }
    },
    "cell_type": "code",
    "source": "import vizro.models as vm",
    "id": "bd0bcdac9b7352b2",
    "outputs": [],
-   "execution_count": 43
+   "execution_count": 6
   },
   {
    "metadata": {},
@@ -423,43 +423,34 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-02T11:50:24.031781Z",
-     "start_time": "2024-05-02T11:50:24.027155Z"
+     "end_time": "2024-05-02T13:56:31.524561Z",
+     "start_time": "2024-05-02T13:56:31.521723Z"
     }
    },
    "cell_type": "code",
    "source": "query = \"I need a filter that filters on the columns 'gdpPerCap` and uses a dropdown as selector.\"",
    "id": "d471253ce71e24a9",
    "outputs": [],
-   "execution_count": 44
+   "execution_count": 73
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-02T11:50:28.028074Z",
-     "start_time": "2024-05-02T11:50:24.895703Z"
+     "end_time": "2024-05-02T13:56:40.917594Z",
+     "start_time": "2024-05-02T13:56:32.170071Z"
     }
    },
    "cell_type": "code",
    "source": "res = get_model(query, model, result_model=vm.Filter)",
    "id": "b6da5558282ab07e",
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/Maximilian_Schulz/Library/Application Support/hatch/env/virtual/vizro-ai/fZiNbsWT/vizro-ai/lib/python3.9/site-packages/pydantic/v1/schema.py:631: UserWarning: CapturedCallable function is excluded from the schema.\n",
-      "  warnings.warn(skip.message, UserWarning)\n"
-     ]
-    }
-   ],
-   "execution_count": 45
+   "outputs": [],
+   "execution_count": 74
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-02T11:50:31.426241Z",
-     "start_time": "2024-05-02T11:50:31.419373Z"
+     "end_time": "2024-05-02T13:56:40.924067Z",
+     "start_time": "2024-05-02T13:56:40.920021Z"
     }
    },
    "cell_type": "code",
@@ -469,15 +460,15 @@
     {
      "data": {
       "text/plain": [
-       "Filter(id='1', type='filter', column='gdpPerCap', targets=[], selector=Dropdown(id='2', type='dropdown', options=['Option 1', 'Option 2', 'Option 3'], value='Option 1', multi=True, title='Select an option', actions=[ActionsChain(id='e443df78-9558-867f-5ba9-1faf7a024204', trigger=Trigger(component_id='2', component_property='value'), actions=[])]))"
+       "langchain_core.exceptions.OutputParserException('Failed to parse Filter from completion {\"id\": \"1\", \"type\": \"filter\", \"column\": \"gdpPerCap\", \"targets\": [], \"selector\": {\"id\": \"2\", \"type\": \"dropdown\", \"options\": [\"Option 1\", \"Option 2\", \"Option 3\"], \"value\": \"Option 1\", \"title\": \"Select GDP Per Capita\"}}. Got: 1 validation error for Filter\\nselector -> Dropdown\\n  Model with id=2 already exists. Models must have a unique id across the whole dashboard. If you are working from a Jupyter Notebook, please either restart the kernel, or use \\'from vizro import Vizro; Vizro._reset()`. (type=value_error.duplicateid)')"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 46
+   "execution_count": 75
   },
   {
    "metadata": {},
@@ -504,61 +495,68 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-02T12:05:55.679856Z",
-     "start_time": "2024-05-02T12:05:55.675177Z"
+     "end_time": "2024-05-02T14:01:09.472610Z",
+     "start_time": "2024-05-02T14:01:09.468935Z"
     }
    },
    "cell_type": "code",
    "source": "query = \"I need a page with a bar and a scatter that filters on the columns 'gdpPerCap` and uses a dropdown as selector.\"",
    "id": "58f95edfa5f13e37",
    "outputs": [],
-   "execution_count": 52
+   "execution_count": 10
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-02T12:06:03.227278Z",
-     "start_time": "2024-05-02T12:05:56.158215Z"
+     "end_time": "2024-05-02T14:01:56.118466Z",
+     "start_time": "2024-05-02T14:01:22.179163Z"
     }
    },
    "cell_type": "code",
-   "source": "res = get_model(query, model, result_model=PageAI)",
+   "source": "res = get_model(query, model, result_model=vm.Page)",
    "id": "8f5f924a2dcb53e2",
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/Users/Maximilian_Schulz/Library/Application Support/hatch/env/virtual/vizro-ai/fZiNbsWT/vizro-ai/lib/python3.9/site-packages/pydantic/v1/schema.py:631: UserWarning: CapturedCallable figure is excluded from the schema.\n",
+      "  warnings.warn(skip.message, UserWarning)\n",
       "/Users/Maximilian_Schulz/Library/Application Support/hatch/env/virtual/vizro-ai/fZiNbsWT/vizro-ai/lib/python3.9/site-packages/pydantic/v1/schema.py:631: UserWarning: CapturedCallable function is excluded from the schema.\n",
       "  warnings.warn(skip.message, UserWarning)\n"
      ]
     }
    ],
-   "execution_count": 53
+   "execution_count": 13
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-02T12:06:05.211199Z",
-     "start_time": "2024-05-02T12:06:05.205696Z"
+     "end_time": "2024-05-02T14:03:03.414132Z",
+     "start_time": "2024-05-02T14:03:03.411064Z"
     }
    },
    "cell_type": "code",
-   "source": "res",
+   "source": "print(res)",
    "id": "a7bc6fc1b4dee3b8",
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "langchain_core.exceptions.OutputParserException('Failed to parse PageAI from completion {\"components\": [\"bar\", \"scatter\"], \"title\": \"My Page\", \"description\": \"Page with bar and scatter components filtering on \\'gdpPerCap\\' column\", \"layout\": null, \"controls\": [{\"type\": \"dropdown\", \"options\": [], \"value\": null, \"multi\": true, \"title\": \"\", \"actions\": []}], \"path\": \"\", \"id\": \"\"}. Got: 1 validation error for PageAI\\ncontrols -> 0\\n  No match for discriminator \\'type\\' and value \\'dropdown\\' (allowed values: \\'filter\\', \\'parameter\\') (type=value_error.discriminated_union.invalid_discriminator; discriminator_key=type; discriminator_value=dropdown; allowed_values=\\'filter\\', \\'parameter\\')')"
-      ]
-     },
-     "execution_count": 54,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Failed to parse Page from completion {\"components\": [{\"id\": \"bar1\", \"type\": \"graph\", \"actions\": []}, {\"id\": \"scatter1\", \"type\": \"graph\", \"actions\": []}], \"title\": \"Economic Data Visualization\", \"description\": \"Visualize GDP per capita data in bar and scatter plot formats.\", \"layout\": null, \"controls\": [{\"id\": \"filter1\", \"type\": \"filter\", \"column\": \"gdpPerCap\", \"targets\": [\"bar1\", \"scatter1\"], \"selector\": {\"id\": \"dropdown1\", \"type\": \"dropdown\", \"options\": [], \"value\": null, \"multi\": true, \"title\": \"\"}}], \"path\": \"\", \"actions\": []}. Got: 4 validation errors for Page\n",
+      "components -> 0 -> Graph -> figure\n",
+      "  field required (type=value_error.missing)\n",
+      "components -> 1 -> Graph -> figure\n",
+      "  field required (type=value_error.missing)\n",
+      "controls -> 0 -> Filter -> targets -> 0\n",
+      "  Target bar1 not found in model_manager. (type=value_error)\n",
+      "controls -> 0 -> Filter -> targets -> 1\n",
+      "  Target scatter1 not found in model_manager. (type=value_error)\n"
+     ]
     }
    ],
-   "execution_count": 54
+   "execution_count": 15
   },
   {
    "metadata": {
