--- a/vizro-ai/examples/instructor_exploration.ipynb
+++ b/vizro-ai/examples/instructor_exploration.ipynb
@@ -138,7 +138,7 @@
     "client = Anthropic(\n",
     "    # This is the default and can be omitted\n",
     "    api_key=os.environ.get(\"ANTHROPIC_API_KEY\"),\n",
-    "    base_url=os.environ.get(\"ANTHROPIC_BASE_URL\")\n",
+    "    base_url=os.environ.get(\"ANTHROPIC_API_BASE\")\n",
     ")\n",
     "\n",
     "message = client.messages.create(\n",
