--- a/vizro-ai/examples/langchain_ollama_exploration.ipynb
+++ b/vizro-ai/examples/langchain_ollama_exploration.ipynb
@@ -5,8 +5,8 @@
    "id": "5999ceb3-7621-4121-85a2-a9766c593807",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-07T13:14:15.043408Z",
-     "start_time": "2024-05-07T13:14:15.025896Z"
+     "end_time": "2024-05-07T11:49:33.858050Z",
+     "start_time": "2024-05-07T11:49:33.840164Z"
     }
    },
    "source": [
@@ -32,8 +32,8 @@
    "id": "8ef5d1e2-6246-4771-85bf-890c343e5fa2",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-07T13:14:17.141371Z",
-     "start_time": "2024-05-07T13:14:15.044972Z"
+     "end_time": "2024-05-07T11:49:39.260098Z",
+     "start_time": "2024-05-07T11:49:34.692288Z"
     }
    },
    "source": [
@@ -52,8 +52,8 @@
    "id": "9573537f-dd35-4981-9bde-54842bdba020",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-07T13:14:17.151837Z",
-     "start_time": "2024-05-07T13:14:17.144240Z"
+     "end_time": "2024-05-07T11:49:39.273067Z",
+     "start_time": "2024-05-07T11:49:39.262224Z"
     }
    },
    "source": [
@@ -72,8 +72,8 @@
    "id": "1b21ea4a-979d-4099-bdd2-9fef98592042",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-07T13:14:17.157716Z",
-     "start_time": "2024-05-07T13:14:17.153085Z"
+     "end_time": "2024-05-07T11:49:39.277285Z",
+     "start_time": "2024-05-07T11:49:39.274474Z"
     }
    },
    "source": [
@@ -86,98 +86,104 @@
    "cell_type": "markdown",
    "id": "92a78d36-4884-41e1-86d7-bd42c5551cf1",
    "metadata": {},
-   "source": [
-    "## OpenAI"
-   ]
+   "source": "## Ollama"
   },
   {
-   "cell_type": "code",
-   "id": "04352436-ccb7-4d06-becb-b177acdbdfac",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-07T13:14:18.235050Z",
-     "start_time": "2024-05-07T13:14:17.159089Z"
+     "end_time": "2024-05-07T11:55:27.221135Z",
+     "start_time": "2024-05-07T11:55:24.022054Z"
     }
    },
-   "source": [
-    "import os\n",
-    "from openai import OpenAI\n",
-    "\n",
-    "client = OpenAI(\n",
-    "    # This is the default and can be omitted\n",
-    "    api_key=os.environ.get(\"OPENAI_API_KEY\"),\n",
-    ")\n",
-    "\n",
-    "chat_completion = client.chat.completions.create(\n",
-    "    messages=[\n",
-    "        {\n",
-    "            \"role\": \"user\",\n",
-    "            \"content\": \"Say this is a test\",\n",
-    "        }\n",
-    "    ],\n",
-    "    model=\"gpt-3.5-turbo\",\n",
-    ")"
-   ],
-   "outputs": [],
-   "execution_count": 5
-  },
-  {
-   "cell_type": "markdown",
-   "id": "508dc5aa-ddf2-4601-a2c5-7c3cc434e057",
-   "metadata": {},
-   "source": [
-    "## Anthropic"
-   ]
-  },
-  {
    "cell_type": "code",
-   "id": "b46dbaeb-deff-45fe-b77b-c41945c87d21",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-05-07T13:14:21.855071Z",
-     "start_time": "2024-05-07T13:14:18.237187Z"
-    }
-   },
    "source": [
-    "import os\n",
-    "from anthropic import Anthropic\n",
+    "# LangChain supports many other chat models. Here, we're using Ollama\n",
+    "from langchain_community.chat_models import ChatOllama\n",
+    "from langchain_core.output_parsers import StrOutputParser\n",
+    "from langchain_core.prompts import ChatPromptTemplate\n",
     "\n",
-    "client = Anthropic(\n",
-    "    # This is the default and can be omitted\n",
-    "    api_key=os.environ.get(\"ANTHROPIC_API_KEY\"),\n",
-    "    base_url=os.environ.get(\"ANTHROPIC_API_BASE\")\n",
-    ")\n",
+    "# supports many more optional parameters. Hover on your `ChatOllama(...)`\n",
+    "# class to view the latest available supported parameters\n",
+    "llm = ChatOllama(model=\"llama3\")\n",
+    "prompt = ChatPromptTemplate.from_template(\"Tell me a short joke about {topic}\")\n",
     "\n",
-    "message = client.messages.create(\n",
-    "    max_tokens=1024,\n",
-    "    messages=[\n",
-    "        {\n",
-    "            \"role\": \"user\",\n",
-    "            \"content\": \"Hello, Claude\",\n",
-    "        }\n",
-    "    ],\n",
-    "    model=\"claude-3-opus-20240229\",\n",
-    ")\n",
-    "print(message.content)"
+    "# using LangChain Expressive Language chain syntax\n",
+    "# learn more about the LCEL on\n",
+    "# /docs/expression_language/why\n",
+    "chain = prompt | llm | StrOutputParser()\n",
+    "\n",
+    "# for brevity, response is printed in terminal\n",
+    "# You can use LangServe to deploy your application for\n",
+    "# production\n",
+    "print(chain.invoke({\"topic\": \"Space travel\"}))"
    ],
+   "id": "da5527df86f0e57e",
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[TextBlock(text=\"Hello! It's nice to meet you. How can I assist you today?\", type='text')]\n"
+      "Why did the astronaut break up with his girlfriend before going to Mars?\n",
+      "\n",
+      "Because he needed space! (get it?)\n"
      ]
     }
    ],
-   "execution_count": 6
+   "execution_count": 7
   },
   {
-   "cell_type": "markdown",
-   "id": "31991cc54c9968b",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-07T12:15:41.559965Z",
+     "start_time": "2024-05-07T12:15:41.521670Z"
+    }
+   },
+   "cell_type": "code",
    "source": [
-    "## Langchain"
-   ]
+    "from langchain_core.prompts import PromptTemplate\n",
+    "from langchain_core.pydantic_v1 import BaseModel, Field\n",
+    "from langchain_experimental.llms.ollama_functions import OllamaFunctions\n",
+    "\n",
+    "\n",
+    "# Schema for structured response\n",
+    "class Person(BaseModel):\n",
+    "    name: str = Field(description=\"The person's name\", required=True)\n",
+    "    height: float = Field(description=\"The person's height\", required=True)\n",
+    "    hair_color: str = Field(description=\"The person's hair color\")\n",
+    "\n",
+    "\n",
+    "# Prompt template\n",
+    "prompt = PromptTemplate.from_template(\n",
+    "    \"\"\"Alex is 5 feet tall. \n",
+    "Claudia is 1 feet taller than Alex and jumps higher than him. \n",
+    "Claudia is a brunette and Alex is blonde.\n",
+    "\n",
+    "Human: {question}\n",
+    "AI: \"\"\"\n",
+    ")\n",
+    "\n",
+    "# Chain\n",
+    "llm = OllamaFunctions(model=\"phi3\", format=\"json\", temperature=0)\n",
+    "structured_llm = llm.with_structured_output(Person)\n",
+    "chain = prompt | structured_llm"
+   ],
+   "id": "7308118b88a992cb",
+   "outputs": [
+    {
+     "ename": "ValidationError",
+     "evalue": "1 validation error for OllamaFunctions\n__root__\n  langchain_community.chat_models.ollama.ChatOllama() got multiple values for keyword argument 'format' (type=type_error)",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mValidationError\u001B[0m                           Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[14], line 24\u001B[0m\n\u001B[1;32m     14\u001B[0m prompt \u001B[38;5;241m=\u001B[39m PromptTemplate\u001B[38;5;241m.\u001B[39mfrom_template(\n\u001B[1;32m     15\u001B[0m \u001B[38;5;250m    \u001B[39m\u001B[38;5;124;03m\"\"\"Alex is 5 feet tall. \u001B[39;00m\n\u001B[1;32m     16\u001B[0m \u001B[38;5;124;03mClaudia is 1 feet taller than Alex and jumps higher than him. \u001B[39;00m\n\u001B[0;32m   (...)\u001B[0m\n\u001B[1;32m     20\u001B[0m \u001B[38;5;124;03mAI: \"\"\"\u001B[39;00m\n\u001B[1;32m     21\u001B[0m )\n\u001B[1;32m     23\u001B[0m \u001B[38;5;66;03m# Chain\u001B[39;00m\n\u001B[0;32m---> 24\u001B[0m llm \u001B[38;5;241m=\u001B[39m \u001B[43mOllamaFunctions\u001B[49m\u001B[43m(\u001B[49m\u001B[43mmodel\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;124;43mphi3\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;28;43mformat\u001B[39;49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;124;43mjson\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mtemperature\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;241;43m0\u001B[39;49m\u001B[43m)\u001B[49m\n\u001B[1;32m     25\u001B[0m structured_llm \u001B[38;5;241m=\u001B[39m llm\u001B[38;5;241m.\u001B[39mwith_structured_output(Person)\n\u001B[1;32m     26\u001B[0m chain \u001B[38;5;241m=\u001B[39m prompt \u001B[38;5;241m|\u001B[39m structured_llm\n",
+      "File \u001B[0;32m~/Library/Application Support/hatch/env/virtual/vizro-ai/fZiNbsWT/vizro-ai/lib/python3.9/site-packages/langchain_core/load/serializable.py:120\u001B[0m, in \u001B[0;36mSerializable.__init__\u001B[0;34m(self, **kwargs)\u001B[0m\n\u001B[1;32m    119\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21m__init__\u001B[39m(\u001B[38;5;28mself\u001B[39m, \u001B[38;5;241m*\u001B[39m\u001B[38;5;241m*\u001B[39mkwargs: Any) \u001B[38;5;241m-\u001B[39m\u001B[38;5;241m>\u001B[39m \u001B[38;5;28;01mNone\u001B[39;00m:\n\u001B[0;32m--> 120\u001B[0m     \u001B[38;5;28;43msuper\u001B[39;49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[38;5;21;43m__init__\u001B[39;49m\u001B[43m(\u001B[49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[43mkwargs\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m    121\u001B[0m     \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_lc_kwargs \u001B[38;5;241m=\u001B[39m kwargs\n",
+      "File \u001B[0;32m~/Library/Application Support/hatch/env/virtual/vizro-ai/fZiNbsWT/vizro-ai/lib/python3.9/site-packages/pydantic/v1/main.py:341\u001B[0m, in \u001B[0;36mBaseModel.__init__\u001B[0;34m(__pydantic_self__, **data)\u001B[0m\n\u001B[1;32m    339\u001B[0m values, fields_set, validation_error \u001B[38;5;241m=\u001B[39m validate_model(__pydantic_self__\u001B[38;5;241m.\u001B[39m\u001B[38;5;18m__class__\u001B[39m, data)\n\u001B[1;32m    340\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m validation_error:\n\u001B[0;32m--> 341\u001B[0m     \u001B[38;5;28;01mraise\u001B[39;00m validation_error\n\u001B[1;32m    342\u001B[0m \u001B[38;5;28;01mtry\u001B[39;00m:\n\u001B[1;32m    343\u001B[0m     object_setattr(__pydantic_self__, \u001B[38;5;124m'\u001B[39m\u001B[38;5;124m__dict__\u001B[39m\u001B[38;5;124m'\u001B[39m, values)\n",
+      "\u001B[0;31mValidationError\u001B[0m: 1 validation error for OllamaFunctions\n__root__\n  langchain_community.chat_models.ollama.ChatOllama() got multiple values for keyword argument 'format' (type=type_error)"
+     ]
+    }
+   ],
+   "execution_count": 14
   },
   {
    "cell_type": "markdown",
@@ -189,28 +195,36 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
    "id": "fb503e0b-3d1e-43ed-a345-f7ad72a5be45",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-07T13:14:40.173943Z",
-     "start_time": "2024-05-07T13:14:39.829518Z"
+     "end_time": "2024-04-30T16:37:19.468850Z",
+     "start_time": "2024-04-30T16:37:18.969860Z"
     }
    },
+   "outputs": [],
    "source": [
     "model = ChatOpenAI(temperature=0)"
-   ],
-   "outputs": [],
-   "execution_count": 8
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
    "id": "39d31754-5eee-4e3a-a95f-dd6dbaf541c3",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-05-07T13:14:41.792315Z",
-     "start_time": "2024-05-07T13:14:40.444660Z"
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Joke(setup=\"Why couldn't the bicycle stand up by itself?\", punchline='Because it was two tired!')"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
     }
-   },
+   ],
    "source": [
     "# Define your desired data structure.\n",
     "class Joke(BaseModel):\n",
@@ -240,30 +254,7 @@
     "chain = prompt | model | parser\n",
     "\n",
     "chain.invoke({\"query\": joke_query})"
-   ],
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/Maximilian_Schulz/Library/Application Support/hatch/env/virtual/vizro-ai/fZiNbsWT/vizro-ai/lib/python3.9/site-packages/pydantic/json_schema.py:2158: PydanticJsonSchemaWarning: Default value default=PydanticUndefined description='question to set up a joke' extra={} is not JSON serializable; excluding default from JSON schema [non-serializable-default]\n",
-      "  warnings.warn(message, PydanticJsonSchemaWarning)\n",
-      "/Users/Maximilian_Schulz/Library/Application Support/hatch/env/virtual/vizro-ai/fZiNbsWT/vizro-ai/lib/python3.9/site-packages/pydantic/json_schema.py:2158: PydanticJsonSchemaWarning: Default value default=PydanticUndefined description='answer to resolve the joke' extra={} is not JSON serializable; excluding default from JSON schema [non-serializable-default]\n",
-      "  warnings.warn(message, PydanticJsonSchemaWarning)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Joke(setup=\"Why couldn't the bicycle stand up by itself?\", punchline='It was two tired.')"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 9
+   ]
   },
   {
    "cell_type": "markdown",
@@ -490,13 +481,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
    "id": "59efd4d6-79b3-46fb-97bc-d21bbf30e70f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-07T13:14:49.259093Z",
-     "start_time": "2024-05-07T13:14:47.733548Z"
+     "end_time": "2024-04-30T16:37:24.248107Z",
+     "start_time": "2024-04-30T16:37:22.468474Z"
     }
    },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Actor(name='Tom Hanks', film_names=['Forrest Gump', 'Cast Away', 'Saving Private Ryan', 'Toy Story', 'The Green Mile', 'Apollo 13', 'Philadelphia', 'Captain Phillips', 'Sully', 'The Da Vinci Code'])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Here's another example, but with a compound typed field.\n",
     "class Actor(BaseModelV1):\n",
@@ -517,20 +521,7 @@
     "chain = prompt | model | parser\n",
     "\n",
     "chain.invoke({\"query\": actor_query})"
-   ],
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Actor(name='Tom Hanks', film_names=['Forrest Gump', 'Cast Away', 'Saving Private Ryan', 'Toy Story', 'The Green Mile'])"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 10
+   ]
   },
   {
    "cell_type": "markdown",
