Exploration on Ollama

--- a/vizro-ai/examples/langchain_develop_retry.ipynb
+++ b/vizro-ai/examples/langchain_develop_retry.ipynb
@@ -5,8 +5,8 @@
    "id": "5999ceb3-7621-4121-85a2-a9766c593807",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-02T14:00:23.595170Z",
-     "start_time": "2024-05-02T14:00:23.523125Z"
+     "end_time": "2024-05-22T08:42:48.418179Z",
+     "start_time": "2024-05-22T08:42:48.386216Z"
     }
    },
    "source": [
@@ -33,8 +33,8 @@
    "id": "8ef5d1e2-6246-4771-85bf-890c343e5fa2",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-02T14:00:29.373122Z",
-     "start_time": "2024-05-02T14:00:23.597476Z"
+     "end_time": "2024-05-22T08:44:50.136370Z",
+     "start_time": "2024-05-22T08:44:50.064696Z"
     }
    },
    "source": [
@@ -45,18 +45,19 @@
     "from langchain_core.prompts import PromptTemplate\n",
     "from langchain_core.pydantic_v1 import BaseModel, Field, validator\n",
     "from langchain_openai import ChatOpenAI\n",
-    "from langchain_core.exceptions import OutputParserException"
+    "from langchain_core.exceptions import OutputParserException\n",
+    "from langchain_experimental.llms.ollama_functions import OllamaFunctions"
    ],
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 7
   },
   {
    "cell_type": "code",
    "id": "9573537f-dd35-4981-9bde-54842bdba020",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-02T14:00:29.392735Z",
-     "start_time": "2024-05-02T14:00:29.375648Z"
+     "end_time": "2024-05-22T08:42:51.171654Z",
+     "start_time": "2024-05-22T08:42:51.161944Z"
     }
    },
    "source": [
@@ -75,8 +76,8 @@
    "id": "1b21ea4a-979d-4099-bdd2-9fef98592042",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-02T14:00:29.397662Z",
-     "start_time": "2024-05-02T14:00:29.394599Z"
+     "end_time": "2024-05-22T08:42:51.176607Z",
+     "start_time": "2024-05-22T08:42:51.173956Z"
     }
    },
    "source": [
@@ -90,8 +91,8 @@
    "id": "df171406-64d3-4c73-96be-83e867ff862f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-02T14:00:30.036473Z",
-     "start_time": "2024-05-02T14:00:29.401985Z"
+     "end_time": "2024-05-22T08:42:51.417301Z",
+     "start_time": "2024-05-22T08:42:51.177891Z"
     }
    },
    "source": [
@@ -206,21 +207,23 @@
    "id": "0295ba8a-0afb-48ff-bad4-3a929fdc7492",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-02T14:01:18.194726Z",
-     "start_time": "2024-05-02T14:01:18.051552Z"
+     "end_time": "2024-05-22T08:59:52.997086Z",
+     "start_time": "2024-05-22T08:59:52.994163Z"
     }
    },
    "source": [
-    "model = ChatOpenAI(model =\"gpt-4-turbo\", temperature=0)\n",
+    "# model = ChatOpenAI(model =\"gpt-4-turbo\", temperature=0)\n",
     "\n",
     "# model = ChatAnthropic(\n",
     "#     model='claude-3-opus-20240229',\n",
     "#     anthropic_api_key=os.environ.get(\"ANTHROPIC_API_KEY\"),\n",
     "#     anthropic_api_url=os.environ.get(\"ANTHROPIC_BASE_URL\")\n",
-    "# )"
+    "# )\n",
+    "\n",
+    "model = OllamaFunctions(model=\"phi3\", format=\"json\", temperature=0.3)"
    ],
    "outputs": [],
-   "execution_count": 12
+   "execution_count": 31
   },
   {
    "cell_type": "markdown",
@@ -624,6 +627,138 @@
    "cell_type": "markdown",
    "source": "In summary, using Vizro models works generally well, but it struggle with more complex models such as Page, likely due to the sheer size of the schema, and thus the large number of validation errors.",
    "id": "3b8722e68c2e86ac"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "## Alter code to try out with Ollama",
+   "id": "3b0a486ef85fa0fc"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-22T08:59:57.957691Z",
+     "start_time": "2024-05-22T08:59:57.953110Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# Define your desired data structure.\n",
+    "class Joke(BaseModel):\n",
+    "    setup: str = Field(description=\"question to set up a joke\")\n",
+    "    punchline: str = Field(description=\"answer to resolve the joke\")\n",
+    "\n",
+    "    # You can add custom validation logic easily with Pydantic.\n",
+    "    # @validator(\"setup\")\n",
+    "    # def question_ends_with_question_mark(cls, field):\n",
+    "    #     if field[-1] != \"?\":\n",
+    "    #         raise ValueError(\"Badly formed question!\")\n",
+    "    #     return field\n",
+    "\n",
+    "\n",
+    "# And a query intented to prompt a language model to populate the data structure.\n",
+    "joke_query = \"Tell me a joke.\"\n",
+    "\n",
+    "class Actor(BaseModel):\n",
+    "    name: str = Field(description=\"name of an actor\")\n",
+    "    film_names: List[str] = Field(description=\"list of names of films they starred in\")\n",
+    "    \n",
+    "actor_query = \"Generate the info for a random actor.\""
+   ],
+   "id": "1d4500532d5f188a",
+   "outputs": [],
+   "execution_count": 32
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-22T08:59:58.315060Z",
+     "start_time": "2024-05-22T08:59:58.309890Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "MODEL_PROMPT = \"Answer the user query. Remember to only respond with JSON and to fill in all keys.\\n{query}\\n\"\n",
+    "MODEL_REPROMPT = MODEL_PROMPT + \"Fix the error in your previous try:\\n{validation_error}\\n\"\n",
+    "\n",
+    "def get_model(query: str, model, result_model: Union[BaseModel, BaseModelV1], max_retry: int = 3) -> BaseModel:\n",
+    "    # parser = PydanticOutputParser(pydantic_object=result_model)\n",
+    "\n",
+    "    for i in range(max_retry):\n",
+    "        try:\n",
+    "            prompt = PromptTemplate(\n",
+    "                template=MODEL_PROMPT if i == 0 else MODEL_REPROMPT,\n",
+    "                input_variables=[\"query\"],\n",
+    "            )\n",
+    "            print(prompt)\n",
+    "\n",
+    "            chain = prompt | model.with_structured_output(result_model)\n",
+    "\n",
+    "            res = chain.invoke({\"query\": query}) if i == 0 else chain.invoke(\n",
+    "                {\"query\": query, \"validation_error\": str(validation_error)})\n",
+    "            return res\n",
+    "        except OutputParserException as e:\n",
+    "            validation_error = e\n",
+    "    return validation_error"
+   ],
+   "id": "499dbc0f210aab8b",
+   "outputs": [],
+   "execution_count": 33
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-22T09:00:31.288046Z",
+     "start_time": "2024-05-22T09:00:24.663544Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "res = get_model(joke_query, model, result_model=Joke)",
+   "id": "f7d730e4bd0b341e",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "input_variables=['query'] template='Answer the user query. Remember to only respond with JSON and to fill in all keys.\\n{query}\\n'\n",
+      "input_variables=['query', 'validation_error'] template='Answer the user query. Remember to only respond with JSON and to fill in all keys.\\n{query}\\nFix the error in your previous try:\\n{validation_error}\\n'\n",
+      "input_variables=['query', 'validation_error'] template='Answer the user query. Remember to only respond with JSON and to fill in all keys.\\n{query}\\nFix the error in your previous try:\\n{validation_error}\\n'\n"
+     ]
+    }
+   ],
+   "execution_count": 36
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-22T09:00:32.226402Z",
+     "start_time": "2024-05-22T09:00:32.222654Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "res",
+   "id": "d0d8ee4ec22cffc0",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "langchain_core.exceptions.OutputParserException('Failed to parse Joke from completion {\"setup\": \"Why was the math book sad? Because it had too many problems.\"}. Got: 1 validation error for Joke\\npunchline\\n  field required (type=value_error.missing)')"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 37
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "c67cd675b630bd95"
   }
  ],
  "metadata": {
